# genDepthLUT

./: .gitignore  CMakeLists.txt  README.md  build_ubuntu.sh
cmake/modules/: FindEGL.cmake
data/: cameraData.json
src/: Json.cpp  main.cpp  shader.cpp
src/include/: main.h  shader.h  shader_resource.h
